k8s/kustomize/base/network-policies/nest-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nest-api
  namespace: nest
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nest-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9090
  egress:
    - ports:
        - protocol: TCP
          port: 443
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nest-dblb
      ports:
        - protocol: TCP
          port: 5000
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nest-gateway
      ports:
        - protocol: TCP
          port: 50051
