k8s/kustomize/base/network-policies/nest-csi.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nest-csi
  namespace: nest
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nest-csi
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: rook-ceph
